--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@supabase/supabase-js": "^2.45.4",
     "framer-motion": "^11.11.0",
     "next": "14.2.14",
+    "node-mailjet": "^6.0.6",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0"
